--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -1,4 +1,4 @@
-<div class="mainContainer">
+<div class="mainContainer disable-dbl-tap-zoom">
 
     <div class="header">
         <img class="logo" src="./assets/img/bmxLogo.png">
@@ -8,7 +8,6 @@
     <div class="menu">
 
 
-        <div style="width:380px; height:200px;">
 
             <div class="foodCard" *ngFor="let item of food; index as i">
                 <h1 class="title secondary-text">{{item.name}}</h1>
@@ -36,24 +35,22 @@
                 </div>
 
             </div>
-            <br>
-            <br>
-        </div>
-
-
-        <div style="width:300px; height:200px"></div>
-        <div style="width:300px; height:200px"></div>
-
-        <div class="footer">
-            <button mat-fab color="primary" style="color: white;outline: none;position: absolute;bottom: 11px;"
-                (click)="checkout()">
-                <mat-icon>shopping_cart</mat-icon>
-            </button>
-
-        </div>
+           <br>
+           <br>
+           <br>
+           <br>
+           <br>
+      
+       
     </div>
 
+    <div class="footer">
+        <button mat-fab color="primary" style="color: white;outline: none;position: absolute;bottom: 11px;"
+            (click)="checkout()">
+            <mat-icon>shopping_cart</mat-icon>
+        </button>
 
+    </div>
 
 
     <!-- MODAL WINDOWS -->
