--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -30,29 +30,6 @@
     }
 }
 
-/* width */
-::ng-deep .menu::-webkit-scrollbar {
-    width: 5px;
-    display: none;
-}
-
-/* Track */
-::ng-deep .menu::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-}
-
-/* Handle */
-::ng-deep .menu::-webkit-scrollbar-thumb {
-    background: #1564bf;
-    border-radius: 10px;
-}
-
-/* Handle on hover */
-::ng-deep .menu::-webkit-scrollbar-thumb:hover {
-    background: #1564bf;
-}
-
 //desktop
 @media (min-width: 576px) {
     .mainContainer {
@@ -65,6 +42,7 @@
         align-items: center;
         border: black solid 5px;
         border-radius: 10px;
+        overflow: hidden;
 
         position: absolute;
         top: 50%;
@@ -114,14 +92,11 @@
         }
 
         .menu {
+            height: 94%;
+            overflow-x: hidden;
             overflow-y: scroll;
-            width: 100%;
-            height: 90%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 20px;
+            position: absolute;
+            top: 110px;
         }
 
         .foodCard {
@@ -173,27 +148,18 @@
     .mainContainer {
         display: flex;
         flex-direction: column;
-        height: 100vh;
-        width: 500px;
-        max-width: 500px;
-        justify-content: space-between;
         align-items: center;
-        // border: black solid 5px;
-        // border-radius: 10px;
-
-        position: absolute;
-        top: 53%;
-        left: 50%;
-        -ms-transform: translate(-50%, -53%);
-        transform: translate(-50%, -53%);
-        @include BoxShadow(6);
+        justify-content: space-between;
+        height: 100vh;
+        overflow: hidden;
+        // @include BoxShadow(6);
 
         .logo {
             width: 80px;
         }
+
         .header {
             width: 100%;
-
             height: 100px;
             display: flex;
             flex-direction: column;
@@ -230,14 +196,19 @@
         }
 
         .menu {
+            // overflow-y: scroll;
+            // width: 100%;
+            // height: 110%;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: center;
+            // margin: 20px;
+            height: 90%;
+            overflow-x: hidden;
             overflow-y: scroll;
-            width: 100%;
-            height: 110%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin: 20px;
+            position: absolute;
+            top: 146px;
         }
 
         .foodCard {
@@ -286,4 +257,35 @@
 }
 // small mobile
 @media (max-width: 400px) {
+}
+
+
+.disable-dbl-tap-zoom {
+    touch-action: manipulation;
+  }
+
+
+// MAIN SCCROLL BAR STYLE
+
+/* width */
+::ng-deep .menu::-webkit-scrollbar {
+    width: 5px;
+    display: none;
+}
+
+/* Track */
+::ng-deep .menu::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::ng-deep .menu::-webkit-scrollbar-thumb {
+    background: #1564bf;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::ng-deep .menu::-webkit-scrollbar-thumb:hover {
+    background: #1564bf;
 }
