--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -115,13 +115,10 @@
 
         .menu {
             overflow-y: scroll;
-            width: 100%;
-            height: 90%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            margin-top: 20px;
+            padding: 110px 0px;
         }
 
         .foodCard {
@@ -132,6 +129,10 @@
             justify-content: space-between;
             align-items: center;
             margin: 10px;
+            // min-width: 98vw;
+            max-width: 98vw;
+            width: 360px;
+            height: 90vh;
         }
 
         .row {
@@ -231,13 +232,10 @@
 
         .menu {
             overflow-y: scroll;
-            width: 100%;
-            height: 110%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            margin: 20px;
+            padding: 110px 0px;
         }
 
         .foodCard {
@@ -248,6 +246,10 @@
             justify-content: space-between;
             align-items: center;
             margin: 10px;
+            // min-width: 98vw;
+            max-width: 98vw;
+            width: 360px;
+            height: 90vh;
         }
 
         .row {
