--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -117,6 +117,17 @@
             justify-content: space-between;
             align-items: center;
             margin: 10px;
+            width: 100%;
+        }
+
+        .rowPopup {
+            display: flex;
+            flex-direction: row;
+            // border: gray solid 1px;
+            // border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px;
         }
 
         .column {
@@ -242,6 +253,17 @@
         }
 
         .row {
+            display: flex;
+            flex-direction: row;
+            // border: gray solid 1px;
+            // border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px;
+            width: 100%;
+        }
+
+        .rowPopup {
             display: flex;
             flex-direction: row;
             // border: gray solid 1px;
