--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -1,9 +1,9 @@
 <div class="mainContainer disable-dbl-tap-zoom">
 
     <div class="header">
-        <img class="logo" src="./assets/img/bmxLogo.png">
+        <img class="logo" src="./assets/img/food/lunaLogo.jpg">
         <p>Luna Rosa</p>
-        <p style="color: grey;">table i#: {{tableId}}</p>
+        <p style="color: grey;">table i#: {{tableNo}}</p>
     </div>
 
     <div class="menu">
@@ -11,19 +11,20 @@
 
 
         <div class="foodCard" *ngFor="let item of food; index as i">
+          
+            <img class="pizzaImage" style="width: 310px;" [src]="item.imgSrc">
             <h1 class="title secondary-text">{{item.name}}</h1>
-            <div class="title secondary-text">{{item.description}}</div>
-
-            <img style="width: 200px;" [src]="item.imgSrc">
+            <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div>
 
             <div class="column">
+                
                 <div class="row">
-                    <button *ngIf="item.options?.length > 0" mat-raised-button color="primary" (click)="option(i)"
+                    <!-- <button *ngIf="item.options?.length > 0" mat-raised-button color="primary" (click)="option(i)"
                         style="color: black;outline: none; margin: 4px; color: white;">
                         options
-                    </button>
+                    </button> -->
                     <button *ngIf="item.toppings?.length > 0" mat-raised-button color="accent" (click)="toppings(i)"
-                        style="color: black;outline: none; margin: 4px; color: white;">
+                        style="color: black;outline: none; margin: 4px; color: white; background-color:#e7362d">
                         toppings
                     </button>
                     <button mat-icon-button color="accent" (click)="removeToCart(i)"
@@ -38,9 +39,9 @@
                         {{item.orderQuantity}}
                     </button>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     Speacial Instructions &nbsp; &nbsp; <input [(ngModel)]="item.specialIntructions" matInput placeholder="Ex. Pizza" type="text">
-                </div>
+                </div> -->
             </div>
         </div>
         <br>
@@ -63,9 +64,14 @@
             style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;">
             <mat-icon (click)="qrcode()">qr_code</mat-icon>
         </button>
-        <button mat-mini-fab color="primary" style="color: white;outline: none;position: absolute;bottom: 19px;   "
-            (click)="reviewOrder()">
-            <mat-icon>shopping_cart</mat-icon>
+        <button mat-mini-fab color="primary" style="color: white;
+        background-color: green;
+        font-size: 6px;
+        bottom: 30px;
+        width: 60px;
+        height: 60px;"
+            (click)="checkout()">
+            <mat-icon>attach_money</mat-icon>
         </button>
         <button mat-mini-fab color="accent"
             style="color: white;outline: none;position: absolute;bottom: 19px; right: 80px;">
@@ -182,3 +188,41 @@
     </div>
 
 </div>
+
+
+<!-- TEMPLATES -->
+
+<!-- <div class="foodCard" *ngFor="let item of food; index as i">
+          
+    <img style="width: 200px;" [src]="item.imgSrc">
+    <h1 class="title secondary-text">{{item.name}}</h1>
+    <div class="title secondary-text">{{item.description}}</div>
+
+    <div class="column">
+        
+        <div class="row">
+            <button *ngIf="item.options?.length > 0" mat-raised-button color="primary" (click)="option(i)"
+                style="color: black;outline: none; margin: 4px; color: white;">
+                options
+            </button>
+            <button *ngIf="item.toppings?.length > 0" mat-raised-button color="accent" (click)="toppings(i)"
+                style="color: black;outline: none; margin: 4px; color: white;">
+                toppings
+            </button>
+            <button mat-icon-button color="accent" (click)="removeToCart(i)"
+                style="color: black;outline: none;">
+                <mat-icon>remove_circle_outline</mat-icon>
+            </button>
+
+            <button mat-icon-button color="primary" (click)="addToCart(i)" style="color: black;outline: none;">
+                <mat-icon>add_circle_outline</mat-icon>
+            </button>
+            <button mat-icon-button color="primary" style="color: black;outline: none;font-size: 30px;">
+                {{item.orderQuantity}}
+            </button>
+        </div>
+        <div class="row">
+            Speacial Instructions &nbsp; &nbsp; <input [(ngModel)]="item.specialIntructions" matInput placeholder="Ex. Pizza" type="text">
+        </div>
+    </div>
+</div> -->
