--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -24,10 +24,10 @@
       </button>
 
       <!-- COMMENTS BOX -->
-      <div fxLayout="col" *ngIf="isCommentBox" fxLayoutAlign="center center">
-        <div fxFlex class="mat-elevation-z4 comment-box">
+      <div class="commentBox" fxLayout="col" *ngIf="isCommentBox" fxLayoutAlign="center center"  cdkDrag>
+        <div fxFlex class="mat-elevation-z4 comment-box" >
           <div class="col">
-            <div class="row">
+            <div class="row" >
               <button (click)="displayCommentBox()" mat-stroked-button style="color: #004684;
                     position: absolute;
                     right: 7px;
