--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -290,18 +290,27 @@
         <form name="loginForm" [formGroup]="loginForm" novalidate>
             <div class="editPostit" style="display: flex;flex-direction: column;">
 
-                <div class="postItTitle" style="display: flex; flex-direction: column;border-radius: 8px;
-                border: 1px solid #004684;">
+                <div class="postItTitle" style="    display: flex;
+                flex-direction: column;
+                border-radius: 8px;
+                border: 1px solid #004684;
+                height: 90px;
+                font-size: 30px;
+                width: 99%">
 
                     <!-- CONCEPT TITLE -->
                     <div style="display: flex; flex-direction: row; color: #004684; margin: 10px;">
                         <mat-icon style="padding-top: 8px;">assignment</mat-icon>
                         <h2 class="text-bold " style="padding-left: 5px;">CONCEPT TITLE</h2>
                     </div>
-                    <mat-form-field *ngIf="!isDeleting" tyle="width: 954px;
+                    <mat-form-field *ngIf="!isDeleting" style="
+                    width: 954px;
+                    font-size: 32px;
                     position: relative;
-                    top: -20px;
-                    font-size: 31px;">
+                    top: -70px;
+                    width: 98%;
+                    margin: 10px;
+                    ">
                         <input matInput type="Concept" formControlName="name">
                     </mat-form-field>
 
@@ -322,18 +331,20 @@
                     </div>
 
                     <div class="newnames" style="display: flex;flex-direction: column;border-radius: 8px;
-                    border: 1px solid #004684;color: #004684; padding-left: 10px; margin: 10px;">
-                        <h2 class="text-bold ">New Names</h2>
-                        <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="23" formControlName="suma"
-                            cdkAutosizeMaxRows="23" style="
-                                      " appearance="outline" formControlName="suma"></textarea>
+                    border: 1px solid #004684; padding-left: 10px; margin: 10px;">
+                        <h2 class="text-bold " style="color: #004684;">New Names</h2>
+                        <textarea style="" matInput cdkTextareaAutosize cdkAutosizeMinRows="23" formControlName="suma"
+                        appearance="outline" formControlName="suma"></textarea>
 
                     </div>
                   
                 </div>
 
-                <div style="display: flex;flex-direction: row;justify-content: flex-end;">
-                <button (click)="buttonOption('savePost')"  mat-fab color="success"
+                <div style="display: flex;
+                flex-direction: row;
+                justify-content: center;
+                height: 70px;">
+                <button (click)="buttonOption('savePost')" class="post-it-done-button"  mat-fab color="success"
                         aria-label="icon">
                         <mat-icon>check</mat-icon>
                     </button>
