new post it edit

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -304,8 +304,8 @@
                           <!-- TITLE -->
                           <mat-card-title>
                             <div class="post-title">
-                              <div class="mat-h2" style="line-height: 100%;">{{item.concept}}</div> 
-                              <mat-icon class="handle" style="float: right;">drag_handle</mat-icon>
+                              <div class="mat-h2" style="line-height: 100%;">{{item.concept}}<div class="handle" style="float: right;width: 250px;    font-size: 1px;">.</div></div> 
+                              
                               <hr>
                             </div>
                            
