--- a/src/app/bmx/bmx.component.scss
+++ b/src/app/bmx/bmx.component.scss
@@ -102,7 +102,7 @@
         width: 665px;
         height: 90vh;
         // height: calc(var(--vh, 1vh) * 90);
-        margin: 0;
+        margin: 0 auto;
         position: absolute;
         top: 52%;
         left: 50%;
