--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -626,7 +626,7 @@ mat-tab-group ::-webkit-scrollbar {
 .comment-box {
   position: absolute;
   // background-color: white;
-  background-color: #ffffffb9;
+  background-color: #fff;
   width: 100%;
   top: 463px;
   z-index: 99999;
