--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -39,7 +39,7 @@
             <div class="singleNameSlide">
 
                 <div class="nameContainer">
-                    <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">COVID-9 mRNA vaccine</div>
+                    <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">{{category}}</div>
                     <div class="testName" [style.font-family]="font2"Comirnaty
                         [style.font-size]="(font2==='coture')?'117px':'190px'" [innerHTML]="testName">
 
