--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -34,13 +34,99 @@
 
 
         <!-- SINGLE TEST NAME -->
-        <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar" >SUMMARY SLIDE</div>
+        <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar">
+
+            <div class="summary" style="margin: 30px 20px;
+            font-size: 40px;
+            max-height: 10%;
+            position: fixed;
+            top: 10px;">Summary</div>
+
+
+
+            <div style="display: flex; 
+                        flex-direction: row; 
+                        justify-content: space-between;
+                        align-items: center;    
+                        margin-top: 100px;
+                        margin-left: 25px;
+                        margin-right: 25px;">
+
+
+                <div style="display: flex; flex-direction: row; justify-content: space-between;
+                align-items: center">
+                    <button mat-raised-button style="margin-right: 5px;background-color: green;">Positive</button>
+                    <button mat-raised-button style="margin-right: 5px; background-color: orange;" color="primary">Neutral</button>
+                    <button mat-raised-button color="warn">Negative</button>
+      
+
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: space-between;
+                align-items: center">
+                    <button mat-raised-button style="margin-right: 5px;background-color: purple;color:white">New Names</button>
+                    <button mat-mini-fab style="margin-right: 5px;background-color: blue;color:white">
+                        <mat-icon>leaderboard</mat-icon>
+                      </button>
+
+                </div>
+
+
+            </div>
+
+
+
+
+
+
+
+
+            <div style="overflow-y: scroll;               
+                        max-height: 543px;
+                        margin-top: 17px;">
+
+
+
+
+
+                <div *ngIf="summaryPositive" class="summary postives">
+                    <div style="display: flex;
+                 flex-direction: row; 
+                 display: flex;
+                justify-content: center;
+                align-items: center;">
+                        <div *ngFor="let item of fonts">{{item}}</div>
+                    </div>
+                </div>
+                <div *ngIf="summaryNeutral" class="summary neutral">
+                    <div *ngFor="let item of fonts">{{item}}</div>
+                </div>
+                <div *ngIf="summaryNegative" class="summary negative">
+                    <div *ngFor="let item of fonts">{{item}}</div>
+                </div>
+                <div *ngIf="summaryNewNames" class="summary new_names">
+                    <div *ngFor="let item of fonts">{{item}}</div>
+                </div>
+                <div *ngIf="summaryChart" class="summary chart">
+                    <div style="display: flex; 
+                flex-direction: column; 
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                font-size: 36px;
+                margin: 20px;
+                line-height: 35px;">
+                        <div *ngFor="let item of fonts">{{item}}</div>
+                        <div *ngFor="let item of fonts">{{item}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div *ngIf="(slideType !== 'Image' && slideType !== 'NameSummary')">
             <div class="singleNameSlide">
 
                 <div class="nameContainer">
                     <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">{{category}}</div>
-                    <div class="testName" [style.font-family]="font2"Comirnaty
+                    <div class="testName" [style.font-family]="font2" Comirnaty
                         [style.font-size]="(font2==='coture')?'117px':'190px'" [innerHTML]="testName">
 
                     </div>
@@ -53,22 +139,27 @@
 
                 <div class="voteIcons">
 
-                    <button *ngIf="positiveChecked" class="voteIconButton"  (click)="selectedOpt('positive');" mat-icon-button matTooltip="" matTooltipPosition="above">
+                    <button *ngIf="positiveChecked" class="voteIconButton" (click)="selectedOpt('positive');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
-                    <button *ngIf="!positiveChecked" class="voteIconButtonGreen"  (click)="selectedOpt('positive');" mat-icon-button matTooltip="" matTooltipPosition="above">
+                    <button *ngIf="!positiveChecked" class="voteIconButtonGreen" (click)="selectedOpt('positive');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
 
-                    <button class="voteIconButton"  (click)="selectedOpt('neutral');" mat-icon-button matTooltip="" matTooltipPosition="above">
+                    <button class="voteIconButton" (click)="selectedOpt('neutral');" mat-icon-button matTooltip=""
+                        matTooltipPosition="above">
                         <mat-icon>sentiment_neutral</mat-icon>
                     </button>
 
-                    <button class="voteIconButton"  (click)="selectedOpt('negative');" mat-icon-button matTooltip="" matTooltipPosition="above">
+                    <button class="voteIconButton" (click)="selectedOpt('negative');" mat-icon-button matTooltip=""
+                        matTooltipPosition="above">
                         <mat-icon>sentiment_very_dissatisfied</mat-icon>
                     </button>
 
-                    <button class="voteIconButton"  (click)="selectedOpt('recraft');" mat-icon-button matTooltip="" matTooltipPosition="above">
+                    <button class="voteIconButton" (click)="selectedOpt('recraft');" mat-icon-button matTooltip=""
+                        matTooltipPosition="above">
                         <mat-icon>sync</mat-icon>
                     </button>
 
@@ -122,11 +213,13 @@
             </button> -->
 
                 <div class="textareas">
-                    <mat-form-field fxFlex="50" id="newNameFormField" appearance="" style="max-width: 45%; padding: 15px 20px;">
+                    <mat-form-field fxFlex="50" id="newNameFormField" appearance=""
+                        style="max-width: 45%; padding: 15px 20px;">
                         <input #txtNewName matInput placeholder="" style="font-size: 30px;text-align: center;">
                     </mat-form-field>
                     <mat-label class="newNamesLabel" style="color: darkblue;">new names</mat-label>
-                    <mat-form-field fxFlex="50" id="commentsFormField" appearance="" style="max-width: 45%; padding: 15px 20px;">
+                    <mat-form-field fxFlex="50" id="commentsFormField" appearance=""
+                        style="max-width: 45%; padding: 15px 20px;">
                         <input #txtComments matInput placeholder="" style="font-size: 30px;text-align: center;">
                     </mat-form-field>
                     <mat-label class="commentsLabel" style="color: darkblue;">comments</mat-label>
