--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -34,7 +34,10 @@
 
 
         <!-- SINGLE TEST NAME -->
-        <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar" >SUMMARY SLIDE</div>
+        <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar" >SUMMARY SLIDE
+
+
+        </div>
         <div *ngIf="(slideType !== 'Image' && slideType !== 'NameSummary')">
             <div class="singleNameSlide">
 
