--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -33,23 +33,33 @@
 
 
 
-        <!-- SINGLE TEST NAME -->
+        <!--❤️ TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE -->
+
+        <!-- IMAGE SLIDE  -->
+        <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
+        <!-- {{slideBackground}} -->
+
+        <!-- SUMMARY SLIDE -->
         <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar summary">
 
             <div class="summaryLabel">Summary</div>
 
             <div class="summaryButtons">
                 <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('positive')" mat-raised-button style="margin-right: 5px;background-color: white;">Positive</button>
-                    <button  (click)="changeSummaryList('neutral')" mat-raised-button style="margin-right: 5px; background-color: white;"
-                        color="primary">Neutral</button>
-                    <button (click)="changeSummaryList('negative')" mat-raised-button style="margin-right: 5px; background-color: white;">Negative</button>
+                    <button (click)="changeSummaryList('positive')" mat-raised-button
+                        style="margin-right: 5px;background-color: white;">Positive</button>
+                    <button (click)="changeSummaryList('neutral')" mat-raised-button
+                        style="margin-right: 5px; background-color: white;" color="primary">Neutral</button>
+                    <button (click)="changeSummaryList('negative')" mat-raised-button
+                        style="margin-right: 5px; background-color: white;">Negative</button>
 
                 </div>
                 <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('newNames')" mat-raised-button style="margin-right: 5px;background-color: white;color:black">New
+                    <button (click)="changeSummaryList('newNames')" mat-raised-button
+                        style="margin-right: 5px;background-color: white;color:black">New
                         Names</button>
-                    <button (click)="changeSummaryList('chart')" mat-mini-fab style="margin-right: 5px;background-color: white;color:black;outline: none;">
+                    <button (click)="changeSummaryList('chart')" mat-mini-fab
+                        style="margin-right: 5px;background-color: white;color:black;outline: none;">
                         <mat-icon>leaderboard</mat-icon>
                     </button>
                 </div>
@@ -102,15 +112,8 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-        <div *ngIf="(slideType !== 'Image' && slideType !== 'NameSummary')">
+        <!-- SINGLE NAME -->
+        <div *ngIf="(slideType === 'NameEvaluation')">
             <div class="singleNameSlide">
 
                 <div class="nameContainer">
@@ -126,8 +129,13 @@
                     </div>
                 </div>
 
+
+
+                <!--VOTE EMOJI BUTTONS -->
                 <div class="voteIcons">
 
+
+                    <!-- POSITIVE BUTTON -->
                     <button *ngIf="positiveChecked" class="voteIconButton" (click)="selectedOpt('positive');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_satisfied</mat-icon>
@@ -137,18 +145,33 @@
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
 
-                    <button class="voteIconButton" (click)="selectedOpt('neutral');" mat-icon-button matTooltip=""
-                        matTooltipPosition="above">
+                    <!-- NEUTRAL BUTTON -->
+                    <button *ngIf="neutralChecked" class="voteIconButton" (click)="selectedOpt('neutral');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
+                        <mat-icon>sentiment_neutral</mat-icon>
+                    </button>
+                    <button *ngIf="!neutralChecked" class="voteIconButton" (click)="selectedOpt('neutral');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_neutral</mat-icon>
                     </button>
 
-                    <button class="voteIconButton" (click)="selectedOpt('negative');" mat-icon-button matTooltip=""
-                        matTooltipPosition="above">
+                    <!-- NEGATIVE BUTTON -->
+                    <button *ngIf="negativeChecked" class="voteIconButton" (click)="selectedOpt('negative');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
+                        <mat-icon>sentiment_very_dissatisfied</mat-icon>
+                    </button>
+                    <button *ngIf="!negativeChecked" class="voteIconButton" (click)="selectedOpt('negative');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_dissatisfied</mat-icon>
                     </button>
 
-                    <button class="voteIconButton" (click)="selectedOpt('recraft');" mat-icon-button matTooltip=""
-                        matTooltipPosition="above">
+                    <!-- RECRAFT BUTTON -->
+                    <button *ngIf="recraftChecked" class="voteIconButton" (click)="selectedOpt('recraft');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
+                        <mat-icon>sync</mat-icon>
+                    </button>
+                    <button *ngIf="!recraftChecked" class="voteIconButton" (click)="selectedOpt('recraft');"
+                        mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sync</mat-icon>
                     </button>
 
@@ -157,8 +180,8 @@
             </div>
 
 
-            <!-- <div class="groupName" >groupName</div> -->
 
+            <!-- VOTERS LIST WINDOWS  NO IMPLEMENTED YET-->
             <div *ngIf="false" class="voteOverview">
 
                 <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
@@ -177,30 +200,15 @@
             </div>
 
 
-            <!-- BI BRAND GO BUTTON -->
+            <!-- BI BRAND GO VOTE BUTTON -->
             <div class="smartRadialButton">
 
                 <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" mat-icon-button (click)="goVote()">
                     BI
                 </button>
-                <!-- <mat-icon class="fisheye">panorama_fish_eye</mat-icon> -->
 
-                <!--  <button *ngIf="isRadialMenuOn" class="G4 GG" mat-icon-button>
-                N
-            </button>
 
-            <button *ngIf="isRadialMenuOn" class="G2 GG" mat-icon-button>
-                C
-            </button>
-
-            <button *ngIf="isRadialMenuOn" class="G3 GG" mat-icon-button>
-                P
-            </button>
-
-            <button *ngIf="isRadialMenuOn" class="G1 GG" mat-icon-button>
-                T
-            </button> -->
-
+                <!-- COMMENT AND NEW NAMES TEXTAREAS -->
                 <div class="textareas">
                     <mat-form-field fxFlex="50" id="newNameFormField" appearance=""
                         style="max-width: 45%; padding: 15px 20px;">
@@ -213,22 +221,20 @@
                     </mat-form-field>
                     <mat-label class="commentsLabel" style="color: darkblue;">comments</mat-label>
                 </div>
+
+
             </div>
 
         </div>
 
-
-        <!-- IMAGE VIEW  -->
-
-
-        <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
-        <!-- {{slideBackground}} -->
+        <!--💔 END OF TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE -->
+        
     </div>
 
 
 
 
-    <!-- SIDE MENU -->
+    <!--RIGHT SIDE TOOL BAR MENU -->
     <div *ngIf="!mainMenu" class="corner_bar_menu">
         <button *ngIf="false" matTooltip="new post it" matTooltipPosition="above" mat-icon-button color="warn"
             aria-label="aria">
